# OptionStratLib

./: .codecov.yml  .gitignore  .issue-black76-greeks.md  .issue-gk-greeks.md  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README.tpl  codecov.yml
.cargo/: config.toml
.codex/agents/: architect.toml  devops.toml  quant-expert.toml  strategies-expert.toml
.github/workflows/: audit.yml  build-wasm.yml  build.yml  code_coverage.yml  format_check.yml  lint.yml  rust.yml  semver.yml  tests-wasm.yml  tests.yml
.windsurf/: issue_198_base_asset_legs_implementation.md  optionstratlib_implementation_study_v2.md  refactoring_issues.md
.windsurf/issues/: 221-benchmarks.md  223-async-feature.md  225-expect-replacement-plan.md  227-unwrap-replacement-plan.md  235-american-option-pricing.md  237-asian-option-pricing.md  238-barrier-option-pricing.md  239-binary-option-pricing.md  240-lookback-option-pricing.md  241-compound-option-pricing.md  242-chooser-option-pricing.md  243-cliquet-option-pricing.md  257-dependency-update.md  README.md  issue_001_unwrap_chains_chain.md  issue_002_unwrap_greeks_equations.md  issue_003_unwrap_model_option.md  issue_004_todos_black_scholes.md  issue_005_todos_position.md  issue_006_extract_strategy_logic.md  issue_007_reduce_clone_calls.md  issue_008_implement_collar.md  issue_009_implement_protective_put.md  issue_010_error_context_anyhow.md  issue_011_add_benchmarks.md  issue_012_property_based_testing.md  issue_013_async_feature_flag.md  issue_014_improve_metrics_docs.md  issue_015_reduce_expect_usage.md  issue_016_improve_positive_type.md  issue_017_unwrap_model_remaining.md  issue_018_pricing_american.md  issue_019_pricing_bermuda.md  issue_020_pricing_asian.md  issue_021_pricing_barrier.md  issue_022_pricing_binary.md  issue_023_pricing_lookback.md  issue_024_pricing_compound.md  issue_025_pricing_chooser.md  issue_026_pricing_cliquet.md  (+5 more)
Draws/Chains/: short_strangle_ger40_area.html
Draws/Metrics/: bid_ask_spread_curve.html  charm_curve.html  charm_surface.html  color_curve.html  color_surface.html  delta_gamma_curve.html  delta_gamma_surface.html  dollar_gamma_curve_call.html  implied_volatility_curve.html  implied_volatility_surface.html  price_shock_curve.html  price_shock_surface.html  put_call_ratio_premium_weighted_curve.html  risk_reversal_curve.html  smile_dynamics_curve.html  smile_dynamics_surface.html  strike_concentration_premium_weighted_curve.html  theta_surface.html  time_decay_curve.html  time_decay_surface.html  vanna_volga_surface.html  volatility_sensitivity_curve.html  volatility_sensitivity_surface.html  volatility_skew_curve.html
Draws/Options/: intrinsic_value_chart.html
Draws/Simulation/: simulator_test_montecarlo.html
Draws/Strategy/: bull_call_spread_profit_loss_chart.html  custom_complex_strategy_chart.html  custom_covered_call_chart.html  custom_dax_strategy_chart.html  custom_short_strangle_profit_loss_chart.html  short_straddle_profit_loss_chart.html  short_strangle_profit_loss_chart.html
Draws/Surfaces/: d1_surface.html  delta_surface.html  simple_surface.html
Draws/Visualization/: bull_call_spread.html
benches/: mod.rs
benches/chains/: generators.rs  mod.rs  optiondata.rs
benches/model/: mod.rs  option.rs  position.rs  positive.rs  strategy.rs
doc/: RELEASE_NOTES_v0.14.0.md  generate_md_docs.sh
doc/framework/: all.md  index.md  macro.assert_decimal_eq!.md  macro.assert_decimal_eq.md  macro.assert_pos_relative_eq!.md  macro.assert_pos_relative_eq.md  macro.build_chart!.md  macro.build_chart.md  macro.configure_chart_and_draw_mesh!.md  macro.configure_chart_and_draw_mesh.md  macro.create_drawing_area!.md  macro.create_drawing_area.md  macro.d2f!.md  macro.d2f.md  macro.d2fu!.md  macro.d2fu.md  macro.draw_line_segments!.md  macro.draw_line_segments.md  macro.f2d!.md  macro.f2d.md  macro.f2du!.md  macro.f2du.md  macro.pos!.md  macro.pos.md  macro.spos!.md  macro.spos.md
examples/: example.rs  option_chain.rs  option_chain_from_random_walk.rs  option_graph.rs  position_graph.rs  random_walk.rs  risk-free-rate.rs  strategy_bull_call_spread.rs  strategy_call_butterfly.rs  strategy_call_butterfly_best_area.rs  strategy_call_butterfly_best_ratio.rs  strategy_custom.rs  strategy_custom_best_area.rs  strategy_custom_best_ratio.rs  strategy_graph.rs  strategy_iron_condor.rs  strategy_long_strangle.rs  strategy_long_strangle_best_area.rs  strategy_long_strangle_best_ratio.rs  strategy_poor_mans_covered_call.rs  strategy_poor_mans_covered_call_best_area.rs  strategy_poor_mans_covered_call_best_ratio.rs  strategy_ratio_call_spread.rs  strategy_ratio_call_spread_best_area.rs  strategy_ratio_call_spread_best_ratio.rs  strategy_short_strangle.rs  strategy_short_strangle_best_area.rs  strategy_short_strangle_best_ratio.rs  strategy_short_strangle_delta.rs  time-and-rate.rs  volatility.rs  volatility_utils.rs
examples/Chains/: DAX-30-jan-2025-21637.0.json  Germany-40-2025-05-27-15:29:00-UTC-24209.json  SP500-18-oct-2024-5781.88.csv  SP500-18-oct-2024-5781.88.json
examples/Local/: Cargo.toml
examples/examples_chain/: Cargo.toml
examples/examples_curves/: Cargo.toml
examples/examples_exotics/: Cargo.toml
examples/examples_metrics/: Cargo.toml
examples/examples_pricing/: Cargo.toml
examples/examples_simulation/: Cargo.toml
examples/examples_strategies/: Cargo.toml
examples/examples_strategies_best/: Cargo.toml
examples/examples_strategies_delta/: Cargo.toml
examples/examples_surfaces/: Cargo.toml
examples/examples_visualization/: Cargo.toml
examples/examples_volatility/: Cargo.toml
scripts/: spanish.py
src/: constants.rs  lib.rs  prelude.rs
src/backtesting/: metrics.rs  mod.rs  results.rs  types.rs
src/chains/: chain.rs  four.rs  generators.rs  legs.rs  mod.rs  optiondata.rs  options.rs  rnd.rs  utils.rs  walk.rs
src/curves/: basic.rs  curve.rs  curve_traits.rs  mod.rs  traits.rs  types.rs  utils.rs
src/error/: chains.rs  common.rs  csv.rs  curves.rs  decimal.rs  graph.rs  greeks.rs  interpolation.rs  metrics.rs  mod.rs  options.rs  position.rs  pricing.rs  (+8 more)
(+811 files in other folders)
