[package]
name = "optionstratlib"
version = "0.5.3"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "OptionStratLib is a comprehensive Rust library for options trading and strategy development across multiple asset classes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/OptionStratLib"
homepage = "https://github.com/joaquinbejar/OptionStratLib"
keywords = ["finance", "options", "trading"]
categories = ["finance", "data-structures"]
include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "Docker/**/*.Dockerfile",
    "Docker/**/*.yml",
]


[features]
default = []
plotly = ["dep:plotly"]
kaleido = [
    "plotly",
    "plotly/kaleido",
    "plotly/kaleido_download",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
approx = "0.5"
plotly = { path = "./vendor/plotly.rs/plotly", version = "0.12.1", default-features = false, optional = true }
statrs = "0.18"
rand = { version = "0.9" }
rand_distr = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3"}
num-traits = "0.2"
serde_json = "1.0"
csv = { version = "1.3"}
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.10" }
itertools = "0.14"
rust_decimal = { version = "1.37", features = ["maths", "serde"] }
rust_decimal_macros = "1.37"
zip = "3.0"
lazy_static = "1.5"
uuid = { version = "1.17", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.6", default-features = false, features = ["html_reports"] }
mockall = "0.13"
tempfile = "3.20"
static_assertions = "1.1"

[[test]]
name = "tests"
path = "tests/unit/mod.rs"

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false

[lib]
name = "optionstratlib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "examples/examples_simulation",
    "examples/examples_strategies_best",
    "examples/examples_strategies_delta",
    "examples/examples_strategies",
    "examples/examples_visualization",
    "examples/examples_chain",
    "examples/examples_volatility",
    "examples/examples_curves",
    "examples/examples_surfaces",
    "examples/Local",
    "vendor/plotly.rs/plotly",
    "vendor/plotly.rs/plotly_derive",
    "vendor/plotly.rs/plotly_kaleido",
]

[workspace.dependencies]
optionstratlib = { path = "." }
tracing = "0.1.41"
rust_decimal = { version = "1.37", features = ["maths", "serde"] }
rust_decimal_macros = "1.37"
plotly = { path = "./vendor/plotly.rs/plotly", version = "0.12.1" }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.9" }
statrs = "0.18"