[package]
name = "examples_exotics"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
optionstratlib = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
positive = { workspace = true }
prettytable-rs = { workspace = true }
