[package]
name = "examples_pricing"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
optionstratlib = { path = "../../" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
positive = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "black_76"
path = "src/bin/black_76.rs"

[[bin]]
name = "black_76_greeks"
path = "src/bin/black_76_greeks.rs"

[[bin]]
name = "garman_kohlhagen"
path = "src/bin/garman_kohlhagen.rs"

[[bin]]
name = "garman_kohlhagen_greeks"
path = "src/bin/garman_kohlhagen_greeks.rs"
