[package]
name = "examples_strategies"
version = "0.1.0"
edition = "2024"

[dependencies]
optionstratlib = { workspace = true , features = ["plotly", "static_export"] }
positive = { workspace = true }
tracing = { workspace = true }
rust_decimal_macros = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }