[package]
name = "examples_surfaces"
version = "0.1.0"
edition = "2024"

[dependencies]
optionstratlib = { workspace = true , features = ["plotly", "static_export"]}
positive = { workspace = true }
tracing = { workspace = true }
rust_decimal_macros = { workspace = true }
rust_decimal = { workspace = true }
plotly = { workspace = true, features = ["static_export_default"] }